--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         uses: bscotch/igor-setup@main
         with:
           access-key: ${{ secrets.ACCESS_KEY }}
-          target-yyp: ${{ github.workspace }}/igor_demo/igor_demo.yyp
+          target-yyp: ${{ github.workspace }}/Ganary/Ganary.yyp
           local-settings-override-file: ${{ github.workspace }}/local_settings.json
         id: igor
       - name: Read settings-dir and echo the json content
@@ -60,6 +60,6 @@ jobs:
           cat ${{ steps.igor.outputs.settings-dir }}
       - run: npm test
         env:
-          YYP: ${{ github.workspace }}/igor_demo/igor_demo.yyp
+          YYP: ${{ github.workspace }}/Ganary/Ganary.yyp
           USERDIR: ${{ steps.igor.outputs.user-dir }}
           YYC: true
