fix: Env has to be set a step before the referencing it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,14 @@ jobs:
         with:
           ffmpeg-version: "6.1.0"
         if: runner.os == 'Linux'
-
-      - name: Create the settings file
+      - name: Use JAVA_HOME_17_X64 for jdk_location
         if: runner.os == 'Linux'
         run: |
           # Store $JAVA_HOME_17_X64 as a GitHub env variable
           echo "JAVA_HOME_17_X64=$JAVA_HOME_17_X64" >> $GITHUB_ENV
+      - name: Create the settings file
+        if: runner.os == 'Linux'
+        run: |
           echo '{"machine.Platform Settings.Android.Keystore.filename": "${{ github.workspace }}/ascx.keystore", "machine.Platform Settings.Android.Keystore.keystore_password": "${{ secrets.KEYSTORE_PASSWORD }}", "machine.Platform Settings.Android.Keystore.keystore_alias_password": "${{ secrets.KEYSTORE_PASSWORD }}", "machine.Platform Settings.Android.Keystore.alias": "${{ secrets.KEYSTORE_USERNAME }}" , "machine.Platform Settings.Android.Paths.jdk_location": "${{ env.JAVA_HOME_17_X64 }}" }' > local_settings.json
       - name: Set Up Android tools (Linux only)
         if: runner.os == 'Linux'
