--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -61,6 +61,7 @@ jobs:
         if: inputs.platform == 'operagx'
         run: |
           echo '{"machine.Platform Settings.operagx.sdk_dir": "${{github.workspace}}/emsdk-cache"}' > local_settings.json
+        shell: bash
       - name: Checkout a demo project
         uses: actions/checkout@v4
         with:
