chore: Testing both Android and GX build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,17 @@ jobs:
         run: |
           # Store $JAVA_HOME_17_X64 as a GitHub env variable
           echo "JAVA_HOME_17_X64=$JAVA_HOME_17_X64" >> $GITHUB_ENV
+      - name: Setup emsdk
+        if: runner.os == 'Linux'
+        uses: mymindstorm/setup-emsdk@v14
+        id: emsdk
+        with:
+          # Make sure to set a version number!
+          version: 3.1.47
       - name: Create the settings file
         if: runner.os == 'Linux'
         run: |
-          echo '{"machine.Platform Settings.Android.Keystore.filename": "${{ github.workspace }}/ascx.keystore", "machine.Platform Settings.Android.Keystore.keystore_password": "${{ secrets.KEYSTORE_PASSWORD }}", "machine.Platform Settings.Android.Keystore.keystore_alias_password": "${{ secrets.KEYSTORE_PASSWORD }}", "machine.Platform Settings.Android.Keystore.alias": "${{ secrets.KEYSTORE_USERNAME }}" , "machine.Platform Settings.Android.Paths.jdk_location": "${{ env.JAVA_HOME_17_X64 }}" }' > local_settings.json
+          echo '{"machine.Platform Settings.Android.Keystore.filename": "${{ github.workspace }}/ascx.keystore", "machine.Platform Settings.Android.Keystore.keystore_password": "${{ secrets.KEYSTORE_PASSWORD }}", "machine.Platform Settings.Android.Keystore.keystore_alias_password": "${{ secrets.KEYSTORE_PASSWORD }}", "machine.Platform Settings.Android.Keystore.alias": "${{ secrets.KEYSTORE_USERNAME }}" , "machine.Platform Settings.Android.Paths.jdk_location": "${{ env.JAVA_HOME_17_X64 }}", "machine.Platform Settings.operagx.sdk_dir": "${{ env.EMSDK }}" }' > local_settings.json
       - name: Set Up Android tools (Linux only)
         if: runner.os == 'Linux'
         run: |
